[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Reflection.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/playersheet.png" type="Texture" id=2]

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform vec4 tint_color : hint_color;

void fragment() {
	vec4 ini_color = texture(TEXTURE, UV);
	
	COLOR = vec4(tint_color[0] * ini_color[0], tint_color[1] * ini_color[1], tint_color[2] * ini_color[2], tint_color[3] * ini_color[3]);
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/tint_color = Color( 0.396078, 1, 0.972549, 1 )

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "carry_fall"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=3]
resource_name = "carry_idle"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 43, 44, 45, 46, 47, 48 ]
}

[sub_resource type="Animation" id=4]
resource_name = "carry_jump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39, 40, 41, 42 ]
}

[sub_resource type="Animation" id=5]
resource_name = "carry_move"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=9]
resource_name = "move"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 6.0

[node name="Reflection" type="Sprite"]
material = SubResource( 11 )
texture = ExtResource( 2 )
hframes = 9
vframes = 6
frame = 1
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 12 )
anims/carry_fall = SubResource( 2 )
anims/carry_idle = SubResource( 3 )
anims/carry_jump = SubResource( 4 )
anims/carry_move = SubResource( 5 )
anims/fall = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/move = SubResource( 9 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="InteractionHitbox" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 1 )

[node name="ActionRaycast" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="RightReflectionRaycasts" type="Node2D" parent="."]

[node name="ReflectionRaycast" type="RayCast2D" parent="RightReflectionRaycasts"]
position = Vector2( 4, -7 )
enabled = true
cast_to = Vector2( 384, 0 )
collision_mask = 2

[node name="ReflectionRaycast2" type="RayCast2D" parent="RightReflectionRaycasts"]
position = Vector2( 4, -1 )
enabled = true
cast_to = Vector2( 384, 0 )
collision_mask = 2

[node name="ReflectionRaycast3" type="RayCast2D" parent="RightReflectionRaycasts"]
position = Vector2( 4, 1 )
enabled = true
cast_to = Vector2( 384, 0 )
collision_mask = 2

[node name="ReflectionRaycast4" type="RayCast2D" parent="RightReflectionRaycasts"]
position = Vector2( 4, 7 )
enabled = true
cast_to = Vector2( 384, 0 )
collision_mask = 2

[node name="LeftReflectionRaycasts" type="Node2D" parent="."]

[node name="ReflectionRaycast5" type="RayCast2D" parent="LeftReflectionRaycasts"]
position = Vector2( -4, -7 )
enabled = true
cast_to = Vector2( -384, 0 )
collision_mask = 2

[node name="ReflectionRaycast6" type="RayCast2D" parent="LeftReflectionRaycasts"]
position = Vector2( -4, -1 )
enabled = true
cast_to = Vector2( -384, 0 )
collision_mask = 2

[node name="ReflectionRaycast7" type="RayCast2D" parent="LeftReflectionRaycasts"]
position = Vector2( -4, 1 )
enabled = true
cast_to = Vector2( -384, 0 )
collision_mask = 2

[node name="ReflectionRaycast8" type="RayCast2D" parent="LeftReflectionRaycasts"]
position = Vector2( -4, 7 )
enabled = true
cast_to = Vector2( -384, 0 )
collision_mask = 2

[node name="UpReflectionRaycasts" type="Node2D" parent="."]

[node name="ReflectionRaycast9" type="RayCast2D" parent="UpReflectionRaycasts"]
position = Vector2( -3, -8 )
enabled = true
cast_to = Vector2( 0, -216 )
collision_mask = 2

[node name="ReflectionRaycast10" type="RayCast2D" parent="UpReflectionRaycasts"]
position = Vector2( 3, -8 )
enabled = true
cast_to = Vector2( 0, -216 )
collision_mask = 2

[node name="DownReflectionRaycasts" type="Node2D" parent="."]

[node name="ReflectionRaycast11" type="RayCast2D" parent="DownReflectionRaycasts"]
position = Vector2( 3, 8 )
enabled = true
cast_to = Vector2( 0, 216 )
collision_mask = 2

[node name="ReflectionRaycast12" type="RayCast2D" parent="DownReflectionRaycasts"]
position = Vector2( -3, 8 )
enabled = true
cast_to = Vector2( 0, 216 )
collision_mask = 2
